syntax = "proto3";
package os.logger;

import "Common.proto";

// Cleaned bounding box representation
message BBox {
  float bbox_center_x_px = 1;  // center x (pixels)
  float bbox_center_y_px = 2;  // center y (pixels)
  float bbox_height_px   = 3;  // height (pixels)
  float bbox_width_px    = 4;  // width (pixels)
}

// Keypoint representation (pixel coordinates)
message Keypoint {
  float x_px = 1;   // x coordinate (pixels)
  float y_px = 2;   // y coordinate (pixels)
}

// Single detection object
message Detection {
  uint32 track_id   = 1;  // track id or 0 if unused
  uint32 class_id   = 2;  // class label id
  float  confidence = 3;  // confidence score
  BBox   bbox       = 4;  // bounding box
  repeated Keypoint keypoints = 5; // optional pose/landmarks
}

// Collection of detections for a frame
message Objects {
  Time   time        = 1;  // timestamp
  uint32 frame_id    = 2;  // associated frame index
  repeated Detection detections = 4;
}
